# refactor-ci

./: .coverage  README.md  coverage.xml  pyproject.toml  report.txt
.github/workflows/: on_push.yml
refactor-ci/tests/: Test1.py  Test2.py  Test3.py  Test4.py  Test5.py  Test6.py  Test7.py  Test8.py
src/: cs132_HW1.py
tests/: test_1.py  test_2.py  test_3.py  test_4.py  test_5.py  test_6.py  test_7.py  test_8.py
