[tool.poetry]
name = "refactor-ci"
version = "0.1.0"
description = ""
authors = ["mythicalBeast15x <117381703+mythicalBeast15x@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
